link style.css and script.js files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Cat Clicker</title>
-</head>
-<body>
 
+<head>
+    <title>Cat Clicker</title>
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    
+    <script src="js/script.js"></script>
 </body>
+
 </html>
