Add the cat image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1>Click The Cat</h1>
+        <img class="cat-img" src="img/cute_cat.jpg"/>
     </div>
     
     
