--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Cat Clicker</title>
-    <link href="css/style.css" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" rel="stylesheet">-->
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 
 <body>
