--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 
 <head>
     <title>Cat Clicker</title>
-  <!--<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" rel="stylesheet">-->
-    <link href="css/style.css" rel="stylesheet"/>
+    <!--<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i" rel="stylesheet">-->
+    <link href="css/style.css" rel="stylesheet" />
 </head>
 
 <body>
     <div class="container">
         <h1>Click The Cat</h1>
-        <img class="cat-img" src="img/cute_cat.jpg"/>
+        <img class="cat-img" src="img/cute_cat.jpg" />
+        <br/>
+        <h3>
+            Number of your clicks:
+            <span class="click-num">0</span>
+        </h3>
     </div>
-    
-    
+
+
     <script src="js/script.js"></script>
 </body>
 
