--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Click The Cat</h1>
-        <img class="cat-img" src="img/cute_cat.jpg" />
+        <img class="cat-img cat-up" src="img/cute_cat.jpg" />
         <br/>
         <h3>
             Number of your clicks:
