Add another cat image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 <body>
     <div class="container">
         <h1>Click The Cat</h1>
-        <img class="cat-img cat-up" src="img/cute_cat.jpg" />
-        <br/>
+        <div class="cats-div">
+            <div class="cat-container">
+                <h3 id="cat1" class="cat-name">Cat1</h3>
+                <img class="cat-img cat-up" src="img/cute_cat1.jpg" />
+            </div>
+            <div class="cat-container">
+                <h3 id="cat2" class="cat-name">Cat2</h3>
+                <img class="cat-img cat-up" src="img/cute_cat2.jpg" />
+            </div>
+        </div>
         <h3>
             Number of your clicks:
             <span class="click-num">0</span>
