--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1>Click The Cat</h1>
         <div class="cats-div">
             <div class="cat-container">
-                <h3 id="cat1" class="cat-name">Cat1</h3>
+                <h3 class="cat-name">Cat1</h3>
                 <img class="cat-img cat-up" src="img/cute_cat1.jpg" />
             </div>
             <div class="cat-container">
-                <h3 id="cat2" class="cat-name">Cat2</h3>
+                <h3 class="cat-name">Cat2</h3>
                 <img class="cat-img cat-up" src="img/cute_cat2.jpg" />
             </div>
         </div>
