Edit the main header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <h1>Click The Cat</h1>
+        <h1>Click The Cats</h1>
         <div class="cats-div">
             <div class="cat-container">
                 <h3 class="cat-name">Cat1</h3>
