--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 
 <body>
     <div class="container">
-        <h1>Click The Cats</h1>
-        <div class="cats-div">
-            <div class="cat-container">
-                <h3 class="cat-name">Cat1</h3>
-                <img class="cat-img cat-up" src="img/cute_cat1.jpg" />
-            </div>
-            <div class="cat-container">
-                <h3 class="cat-name">Cat2</h3>
-                <img class="cat-img cat-up" src="img/cute_cat2.jpg" />
-            </div>
+        <div class="main-section cats-list">
+            <h3>Choose Your Cat</h3>
+            
         </div>
-        <h3>
-            Number of your clicks:
-            <span class="click-num">0</span>
-        </h3>
+        <div class="main-section show-cats-div">
+            <h1>Click The Cats</h1>
+            
+            <h3>
+                Number of your clicks:
+                <span class="click-num">0</span>
+            </h3>
+        </div>
     </div>
+
 
 
     <script src="js/jquery.min.js"></script>
