--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <div class="container">
         <div class="main-section cats-list">
             <h3>Choose Your Cat</h3>
-            
+
         </div>
-        <div class="main-section show-cats-div">
+        <div class="main-section show-cats">
             <h1>Click The Cats</h1>
-            
-            <h3>
-                Number of your clicks:
-                <span class="click-num">0</span>
-            </h3>
+            <div class="active-cat">
+                <img class="cat-img cat-Btn cat-up" src=""/>
+            </div>
+            <div class="click-num-div">
+                <h3>Number of your clicks:
+                    <span class="click-num">0</span>
+                </h3>
+            </div>
         </div>
     </div>
 
