Styles for the new layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="main-section show-cats">
             <h1>Click The Cats</h1>
             <div class="active-cat">
-                <img class="cat-img cat-Btn cat-up" src=""/>
+                <h2 class="cat-name"></h2>
+                <img class="active-cat-img cat-Btn cat-up" src=""/>
             </div>
             <div class="click-num-div">
                 <h3>Number of your clicks:
