Add the Admin section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,34 @@
             <h1>Click The Cats</h1>
             <div class="active-cat">
                 <h2 class="cat-name"></h2>
-                <img class="active-cat-img cat-Btn cat-up" src=""/>
+                <img class="active-cat-img cat-Btn cat-up" src="" />
             </div>
             <div class="click-num-div">
                 <h3>Number of your clicks:
                     <span class="click-num">0</span>
                 </h3>
             </div>
+            <br/><br/><br/>
+            <div class="admin-div">
+                <button type="button" class="admin-btn">Admin Mode</button>
+                <form class="admin-form" action="">
+                    <div class="main-section labels">
+                        <label>Cat Name:</label>
+                        <br/><br/>
+                        <label>Cat image URL:</label>
+                    </div>
+                    <div class="main-section textboxes">
+                        <input type="text" placeholder="Enter cat's name here">
+                        <input type="text" placeholder="Enter cat's URL here" style="margin-top: 11px;">
+                    </div>
+                    <div class="submit-Btns">
+                        <button class="save-btn" type="submit">Save</button>
+                        <button class="cancel-btn" type="submit">Cancel</button>
+                    </div>
+                </form>
+            </div>
         </div>
+
     </div>
 
 
